# snakemake-jobmonitor

./: LICENSE  README.md  pyproject.toml
example/: jobmon.snk  regular.snk
example/.snakemake/metadata/: Li4vc2NyYXRjaC9yZWd1bGFyL3BhdGhfdG9fcmVzdWx0cy9jYXNlLTFfQi5wbmc=  Li4vc2NyYXRjaC9yZWd1bGFyL3BhdGhfdG9fcmVzdWx0cy9jYXNlLTFfRy5wbmc=  Li4vc2NyYXRjaC9yZWd1bGFyL3BhdGhfdG9fcmVzdWx0cy9jYXNlLTFfUi5wbmc=  Li4vc2NyYXRjaC9yZWd1bGFyL3BhdGhfdG9fcmVzdWx0cy9jYXNlLTJfQi5wbmc=  Li4vc2NyYXRjaC9yZWd1bGFyL3BhdGhfdG9fcmVzdWx0cy9jYXNlLTJfRy5wbmc=  Li4vc2NyYXRjaC9yZWd1bGFyL3BhdGhfdG9fcmVzdWx0cy9jYXNlLTJfUi5wbmc=  Li4vc2NyYXRjaC9yZWd1bGFyL3BhdGhfdG9fcmVzdWx0cy9jYXNlLTNfQi5wbmc=  Li4vc2NyYXRjaC9yZWd1bGFyL3BhdGhfdG9fcmVzdWx0cy9jYXNlLTNfRy5wbmc=  Li4vc2NyYXRjaC9yZWd1bGFyL3BhdGhfdG9fcmVzdWx0cy9jYXNlLTNfUi5wbmc=  Li4vc2NyYXRjaC9yZWd1bGFyL3BhdGhfdG9fcmVzdWx0cy9yZXBvcnQudHh0  cGF0aF90b19yZXN1bHRzL2Nhc2UtM19CLnBuZw==  cGF0aF90b19yZXN1bHRzL2Nhc2UtM19HLnBuZw==  cGF0aF90b19yZXN1bHRzL2Nhc2UtM19SLnBuZw==  cGF0aF90b19yZXN1bHRzL2Nhc2UtMV9CLnBuZw==  cGF0aF90b19yZXN1bHRzL2Nhc2UtMV9HLnBuZw==  cGF0aF90b19yZXN1bHRzL2Nhc2UtMV9SLnBuZw==  cGF0aF90b19yZXN1bHRzL2Nhc2UtMl9CLnBuZw==  cGF0aF90b19yZXN1bHRzL2Nhc2UtMl9HLnBuZw==  cGF0aF90b19yZXN1bHRzL2Nhc2UtMl9SLnBuZw==  cGF0aF90b19yZXN1bHRzL3JlcG9ydC50eHQ=
src/snakemake_jobmonitor/: __init__.py  jobmonitor.py
