[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "snakemake_jobmonitor"
version = "0.0"
authors = [
  { name="Rembrandt Bakker", email="r.bakker@etz.nl" }
]
description = "Tool used to extend Snakefile with Job Monitoring capabilities"
readme = "README.md"
required-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/rbakker/snakemake-jobmonitor"
Issues = "https://github.com/rbakker/snakemake-jobmonitor/issues"
